# data_manager

./: MANIFEST.in  README.md  pyproject.toml
src/data_util/: __init__.py  __main__.py  command.py  config.py  database.py  dataset.py  db.py  df.py  ds.py  sk.py
test/: common_util.py
test/data_util_config/: test_config.py
test/data_util_db/: test_db.py
