[project]
name = "data_util"
version = "0.0.1"
description = "Common Data/Dataset/DataCache utilities"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
  { name="Henock Abebe", email="hay.knock@gmail.com" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry]
packages = [
    { include = "src" }
]

[tool.setuptools]
include-package-data = true
package-data = {"data_util" = ["data_files/*.json"]}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]  # Optional
data_util = "data_util:__main__"

[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
